# HCFL

./: .gitignore  CITATION.cff  CODE_AVAILABILITY.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: _generate_configs.py  caco2.yaml  caco2_paper.yaml  drugbank.yaml  freesolv.yaml
hcfl/: __init__.py  cli.py  config.py  metrics.py  serial.py  simulator.py  utils.py
hcfl/contribution/: __init__.py  coverage.py  estimators.py  hybrid.py  performance.py
hcfl/engine/: __init__.py  context.py  server.py  trainer.py
hcfl/integration/: __init__.py  controller.py  executor.py  job.py  naming.py
hcfl/models/: __init__.py  chemberta.py  embedder.py  params.py
hcfl/selection/: __init__.py  adaptive.py  system_sim.py  vcs.py
scripts/: prepare_data.py  run_nvflare.py  run_simulation.py
tests/: test_core.py
